Explicitly set the image label spacing for the buttons on the bookmarks bar.

Bug: 727606
Change-Id: Iea519395d402dfb679ac05cfa7377476d5db7c8e